--- a/templates/ToDo/index.html
+++ b/templates/ToDo/index.html
@@ -1,11 +1,28 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <header>
-        <nav class="navbar navbar-dark bg-primary">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="#">Todo</a>
-            </div>
-        </nav>
-    </header>
+    <div class="row mt-4">
+        <h2>Add item</h2>
+        
+    </div>
+
+    <form action="/addTodo" method="post" class="form-inline row row-cols-lg-auto">
+        {% csrf_token %}
+        <div class="col">
+            <input type="text" name="taskInput" class="form-control mb-2 mr-sm-2" placeholder="Add a new task">
+        </div>
+        <div class="col">
+            <button type="submit" class="btn btn-primary mb-2 mt-10">Submit</button>
+        </div>
+    </form>
+
+    <div class="row mt-4">
+        <div class="col">
+            <ul class="list-group">
+                {% for item in items %}
+                    <li class="list-group-item">{{ item.text }}</li>
+                {% endfor %}
+            </ul>
+        </div>
+    </div>
 {% endblock content %}
