--- a/templates/ToDo/index.html
+++ b/templates/ToDo/index.html
@@ -20,7 +20,15 @@
         <div class="col">
             <ul class="list-group">
                 {% for item in items %}
-                    <li class="list-group-item">{{ item.text }}</li>
+                    <li class="list-group-item">
+                        {{ item.text }}
+                        <div class="float-end">
+                            <form action="/removeTodo/{{ item.id }}" method="POST">
+                                {% csrf_token %}
+                                <button type="submit" class="btn btn-danger btn-sm">Delete</button>
+                            </form>
+                        </div>
+                    </li>
                 {% endfor %}
             </ul>
         </div>
